<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/navigation_offline"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/favourite"/>
        <item
            android:id="@+id/navigation_pref"
            android:icon="@drawable/ic_assistant"
            android:title="@string/privacy_policy"/>
        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us"/>

    </group>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_cell_phone"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />
        </menu>
    </item>
</menu>